Added isValid route with PreAuthorisaition
Returns true, or else 404
